fix spilling on navbar

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 
 html {
   font-size: 16px;
+  max-width: 100vw;
 }
 
 li {
@@ -32,22 +33,23 @@ li {
 
   .links {
     float: right;
-    /* min-width: 380px; */
   }
 
   .navbar {
-    min-width: 430px;
+    padding: 0;
+    /* min-width: 430px; */
+    /* max-width: 100vw; */
   }
 
   .navbar__links {
     min-width: 390px;
-    padding-left: 6em;
+    /* padding-right: 6em; */
   }
 }
 
 .logo {
   position: absolute;
-  left: 0;
+  left: 1rem;
   top: 0;
 }
 
@@ -64,15 +66,15 @@ li {
   height: 4rem;
   max-height: 100vmin;
   background-color: rgb(255, 255, 255, 0.5);
-  width: 100vw;
-  padding-right: 5rem;
+  min-width: 100vw;
+  right: 0;
   align-items: center;
   justify-content: right;
 }
 
 .navbar__links a {
   font-size: 1.3rem;
-  padding: 10px;
+  margin-right: 2rem;
 
   text-decoration: none;
   text-transform: uppercase;
@@ -89,9 +91,9 @@ li {
     url(./imgs/img2.jpg);
   background-size: cover;
   height: 100vh;
-  width: 100vw;
+
   padding: 0 3em;
-  /* max-width: 1100px; */
+
   font-size: 2rem;
 }
 
@@ -235,7 +237,7 @@ li {
   display: flex;
   text-align: left;
   justify-content: center;
-  width: 100vw;
+  max-width: 100vw;
   background-color: var(--color-black);
 }
 
